<?xml version="1.0"?>
<package format="2">
  <name>mavros</name>
  <version>0.10.2</version>
  <description>
    MAVROS -- MAVLink extendable communication node for ROS
    with UDP proxy for Ground Control Station.
  </description>

  <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>
  <author email="vooon341@gmail.com">Vladimir Ermakov</author>
  <license>GPLv3</license>

  <url type="website">http://wiki.ros.org/mavros</url>
  <url type="repository">https://github.com/mavlink/mavros.git</url>
  <url type="bugtracker">https://github.com/mavlink/mavros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>message_generation</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>mavlink</depend>
  <depend>angles</depend>
  <depend>libmavconn</depend>
  <depend>rosconsole_bridge</depend>
  <exec_depend>python-argparse</exec_depend>

  <export>
    <mavros plugin="${prefix}/mavros_plugins.xml" />
    <rosdoc config="rosdoc.yaml" />
    <rosindex>
      <!-- ROSIndex metadata. Wait until <include> will work -->
      <tags>
        <tag>uav</tag>
        <tag>mav</tag>
        <tag>mavlink</tag>
        <tag>plugin</tag>
        <tag>apm</tag>
        <tag>px4</tag>
      </tags>
    </rosindex>
  </export>
</package>
