<?xml version="1.0"?>
<package format="2">
  <name>mavros</name>
  <version>1.8.0</version>
  <description>
    MAVROS -- MAVLink extendable communication node for ROS
    with proxy for Ground Control Station.
  </description>

  <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>
  <author email="vooon341@gmail.com">Vladimir Ermakov</author>
  <license>GPLv3</license>
  <license>LGPLv3</license>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/mavros</url>
  <url type="repository">https://github.com/mavlink/mavros.git</url>
  <url type="bugtracker">https://github.com/mavlink/mavros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- system dependencies -->
  <depend>boost</depend>
  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_depend>mavlink</build_depend>
  <build_export_depend>mavlink</build_export_depend>
  <build_depend>geographiclib</build_depend>
  <build_export_depend>geographiclib</build_export_depend>
  <build_depend>geographiclib-tools</build_depend>
  <build_export_depend>geographiclib-tools</build_export_depend>
  <!-- pymavlink dependency
  <exec_depend>mavlink</exec_depend>
  -->

  <!-- packages -->
  <build_depend>angles</build_depend>
  <build_depend>cmake_modules</build_depend>
  <depend>diagnostic_updater</depend>
  <depend>eigen_conversions</depend>
  <depend>libmavconn</depend>
  <depend>pluginlib</depend>
  <depend>rosconsole_bridge</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <!-- message packages -->
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>gtest</test_depend>

  <export>
    <mavros plugin="${prefix}/mavros_plugins.xml" />
    <rosdoc config="rosdoc.yaml" />
    <rosindex>
      <!-- ROSIndex metadata. Wait until <include> will work -->
      <tags>
        <tag>uav</tag>
        <tag>mav</tag>
        <tag>mavlink</tag>
        <tag>plugin</tag>
        <tag>apm</tag>
        <tag>px4</tag>
      </tags>
    </rosindex>
  </export>
</package>
