<?xml version="1.0"?>
<package format="2">
  <name>mavros</name>
  <version>2.6.0</version>
  <description>
    MAVROS -- MAVLink extendable communication node for ROS
    with proxy for Ground Control Station.
  </description>

  <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>

  <license>GPLv3</license>
  <license>LGPLv3</license>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/mavros</url>
  <url type="repository">https://github.com/mavlink/mavros.git</url>
  <url type="bugtracker">https://github.com/mavlink/mavros/issues</url>

  <author email="vooon341@gmail.com">Vladimir Ermakov</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

  <!-- system dependencies -->
  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_depend>mavlink</build_depend>
  <build_export_depend>mavlink</build_export_depend>
  <build_depend>geographiclib</build_depend>
  <build_export_depend>geographiclib</build_export_depend>
  <build_depend>geographiclib-tools</build_depend>
  <build_export_depend>geographiclib-tools</build_export_depend>
  <!-- pymavlink dependency
  <exec_depend>mavlink</exec_depend>
  -->

  <!-- packages -->
  <build_depend>angles</build_depend>
  <depend>diagnostic_updater</depend>
  <depend>message_filters</depend>
  <depend>eigen_stl_containers</depend>
  <depend>libmavconn</depend>
  <depend>pluginlib</depend>
  <!-- XXX <depend>rosconsole_bridge</depend> -->
  <depend>libconsole-bridge-dev</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcpputils</depend>

  <!-- message packages -->
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-click</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>google-mock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>

    <mavros plugin="${prefix}/mavros_plugins.xml" />
    <rosdoc config="rosdoc.yaml" />
    <rosindex>
      <!-- ROSIndex metadata. Wait until <include> will work -->
      <tags>
        <tag>uav</tag>
        <tag>mav</tag>
        <tag>mavlink</tag>
        <tag>plugin</tag>
        <tag>apm</tag>
        <tag>px4</tag>
      </tags>
    </rosindex>
  </export>
</package>
