[metadata]
name = 'mavros'
description = 'Helper scripts and module for MAVROS'
license = 'Triple licensed under GPLv3, LGPLv3 and BSD'
author = 'Vladimir Ermakov'
author-email = 'vooon341@gmail.com'
maintainer = 'Vladimir Ermakov'
maintainer_email = 'vooon341@gmail.com'
keywords = 'ROS'
classifiers =
    'Intended Audience :: Developers'
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
    'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)'
    'License :: OSI Approved :: BSD License'
    'Programming Language :: Python'
    'Topic :: Software Development'
tests_require = 'pytest'

[options.entry_points]
console_scripts =
    mav=mavros.cmd:cli

[develop]
script-dir=$base/lib/mavros

[install]
install-scripts=$base/lib/mavros

[yapf]
blank_line_before_nested_class_or_def = True
