[metadata]
name = 'mavros'
description = 'Helper scripts and module for MAVROS'
license = 'Triple licensed under GPLv3, LGPLv3 and BSD'
author = 'Vladimir Ermakov'
author_email = 'vooon341@gmail.com'
maintainer = 'Vladimir Ermakov'
maintainer_email = 'vooon341@gmail.com'
keywords = 'ROS'
classifiers =
    'Intended Audience :: Developers'
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
    'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)'
    'License :: OSI Approved :: BSD License'
    'Programming Language :: Python'
    'Topic :: Software Development'
tests_require = 'pytest'

[options.entry_points]
console_scripts =
    mav=mavros.cmd:cli

[develop]
script_dir=$base/lib/mavros

[install]
install_scripts=$base/lib/mavros

[flake8]
# NOTE: based on ament_flake8.ini from Jazzy, but extended with Q000,I100,I101
extend-ignore = B902,C816,D100,D101,D102,D103,D104,D105,D106,D107,D203,D212,D404,I202,Q000,I100,I101
import-order-style = google
max-line-length = 99
show-source = true
statistics = true
