<?xml version="1.0"?>
<package>
  <name>mavros_extras</name>
  <version>0.8.0</version>
  <description>Extra nodes and plugins for mavros</description>

  <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>
  <author email="vooon341@gmail.com">Vladimir Ermakov</author>
  <license>GPLv3</license>

  <url type="website">http://wiki.ros.org/mavros_extras</url>
  <url type="repository">https://github.com/vooon/mavros.git</url>
  <url type="bugtracker">https://github.com/vooon/mavros/issues</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>mavlink</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>mavlink</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <mavros plugin="${prefix}/mavros_plugins.xml" />
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
